--- a/yatube/templates/index.html
+++ b/yatube/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 
 {% block title %}
     Последние обновления на сайте
@@ -11,6 +12,9 @@
 
 {% block content %}
     {% for post in page %}
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+            <img class="card-img" src="{{ im.url }}" alt="Photo">
+        {% endthumbnail %}
         <h3>
             Автор: {{ post.author.get_full_name }}, дата публикации: {{ post.pub_date|date:"d M Y" }}
         </h3>
