--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}Профиль{% endblock %}
 {% block content %}
 
@@ -12,6 +13,9 @@
             {% for post in page %}
                 
             <div class="card mb-3 mt-1 shadow-sm">
+                {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+                    <img class="card-img" src="{{ im.url }}" alt="Photo">
+                {% endthumbnail %}
                 <div class="card-body">
                     <p class="card-text">
                         <a href="{% url 'posts:post' post.author.username post.id %}">
@@ -21,7 +25,7 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group ">
-                            <a class="btn btn-sm text-muted" href="{% url 'posts:post' post.author.username post.id %}" role="button">
+                            <a class="btn btn-sm text-muted" href="{% url 'posts:add_comment' post.author.username post.id %}" role="button">
                                 Добавить комментарий
                             </a>
                                 
