--- a/yatube/templates/index.html
+++ b/yatube/templates/index.html
@@ -1,18 +1,15 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
-
+{% load cache %}
 {% block title %}Последние обновления на сайте{% endblock %}
 
 {% block header %}Последние обновления на сайте{% endblock %}
 
+{% cache 20 index_page %}
 {% block content %}
-
-    {% for post in page %}
-        
+    {% for post in page %}      
         {% include 'posts/post_item.html' with post=post %}
-
     {% endfor %}
-
     {% include 'paginator.html' %}
-
 {% endblock %}
+{% endcache %}
