--- a/yatube/templates/group.html
+++ b/yatube/templates/group.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 
 {% block title %}
     Записи сообщества {{ group.title }}
@@ -10,14 +11,8 @@
 
 {% block content %}
     <p>{{ group.description }}</p>
-    {% for post in page %}
-        <h3>
-            Автор: {{ post.author.get_full_name }}, дата публикации: {{ post.pub_date|date:"d M Y" }}
-        </h3>
-        <p>{{ post.text|linebreaksbr }}</p>
-        <hr>
+    {% for post in page %}        
+        {% include 'posts/post_item.html' with post=post %}
     {% endfor %}
-
     {% include 'paginator.html' %}
-
 {% endblock %}
