--- a/yatube/templates/posts/post.html
+++ b/yatube/templates/posts/post.html
@@ -1,38 +1,16 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}Пост № {{ post.id }}{% endblock %}
 {% block content %}
-    
+
 <main role="main" class="container">
-    <div class="row">
-
-      {% include 'posts/includes/author_card.html' with author=post.author %}
-
-      <div class="col-md-9">
-        <div class="card mb-3 mt-1 shadow-sm">
-          <div class="card-body">
-            <p class="card-text">
-              <a href="{% url 'posts:profile' post.author.username %}">
-                <strong class="d-block text-gray-dark">
-                  @{{ post.author }}
-                </strong>
-              </a>
-              {{ post }}
-            </p>
-              
-            <div class="d-flex justify-content-between align-items-center">
-              {% if post.author == request.user %}
-              <div class="btn-group">
-                <a class="btn btn-sm text-muted" href="{% url 'posts:post_edit' post.author.username post.id %}" role="button">
-                  Редактировать
-                </a>
-              </div>
-              {% endif %}
-              <small class="text-muted">{{ post.pub_date|date:"d M Y" }}</small>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class="row">
+    {% include 'posts/includes/author_card.html' with author=post.author %}
+    <div class="col-md-9">
+      {% include 'posts/post_item.html' with post=post%}
+      {% include 'posts/includes/comments.html' %}
     </div>
-  </main> 
+  </div>
+</main>
 
 {% endblock %}
